# ffplayer

./: .gitignore
app/: build.gradle
app/src/androidTest/java/com/test/ffmpegdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native_player.cpp
app/src/main/cpp/LibeventBuild/: CMakeLists.txt
app/src/main/cpp/LibeventBuild/Android/armeabi-v7a/include/event2/: event-config.h
app/src/main/cpp/LibeventBuild/Android/x86_64/include/event2/: event-config.h
app/src/main/cpp/decoder/: Decoder.h  VideoDecoder.cpp  VideoDecoder.h
app/src/main/cpp/eventloop/: any.h  event.cpp  event.h  event_dispatcher.cpp  event_dispatcher.h  event_handler.h
app/src/main/cpp/ffmpeg/: CMakeLists.txt
app/src/main/cpp/ffmpeg/arm64-v8a/include/fdk-aac/: aacenc_lib.h
app/src/main/cpp/ffmpeg/arm64-v8a/include/libavcodec/: d3d11va.h  mediacodec.h  qsv.h  videotoolbox.h  xvmc.h
app/src/main/cpp/ffmpeg/arm64-v8a/include/libavformat/: avio.h
app/src/main/cpp/ffmpeg/arm64-v8a/include/libavutil/: frame.h  hwcontext_d3d11va.h  hwcontext_dxva2.h  log.h
app/src/main/cpp/ffmpeg/armeabi-v7a/include/fdk-aac/: aacdecoder_lib.h
app/src/main/cpp/ffmpeg/armeabi-v7a/include/libavcodec/: avcodec.h  dxva2.h  vdpau.h
app/src/main/cpp/ffmpeg/armeabi-v7a/include/libavformat/: avformat.h
app/src/main/cpp/ffmpeg/armeabi-v7a/include/libavutil/: avutil.h  channel_layout.h  downmix_info.h  encryption_info.h  hwcontext_vaapi.h
app/src/main/cpp/glm/: CMakeLists.txt
app/src/main/cpp/glm/glm/detail/: dummy.cpp  type_mat2x2.inl  type_mat3x3.inl  type_mat4x4.inl  type_vec2.inl  type_vec3.inl  type_vec4.inl
app/src/main/cpp/glm/glm/gtc/: quaternion.inl
app/src/main/cpp/glm/glm/gtx/: matrix_decompose.inl  string_cast.inl
app/src/main/cpp/jniutils/: Assert.h  CMakeLists.txt  JNIKey.cpp  JNIKey.h  JavaObject.cpp  JavaObject.h  JavaTypes.cpp  JavaTypes.h  JniObject.h  JniUtils.h  JvmEnv.cpp  JvmEnv.h  JvmOnLoad.cpp  JvmOnLoad.h  Platform.cpp  Platform.h  SymbolRegister.cpp  SymbolRegister.h
app/src/main/cpp/jniutils/log/: log.h
app/src/main/cpp/jniutils/nativeref/: NativeObjectRef.cpp  NativeObjectRef.h
app/src/main/cpp/libev/: 0001-port-to-android.patch  CMakeLists.txt  README  ev.html  ev_select.c
app/src/main/cpp/libev/android/armeabi-v7a/: config.h
app/src/main/cpp/libev/android/x86_64/: config.h
app/src/main/cpp/player/: CMakeLists.txt  IPlayer.h  VideoPlayer.cpp  VideoPlayer.h
app/src/main/cpp/player/decoder/: AudioDecoder.cpp  AudioDecoder.h  Decoder.h  DecoderBase.cpp  DecoderBase.h  VideoDecoder.cpp  VideoDecoder.h
app/src/main/cpp/player/render/: AudioRender.cpp  AudioRender.h  ReSample.cpp  ReSample.h  Render.h  VideoRender.cpp  VideoRender.h
app/src/main/cpp/player/render/gl/: GLUtils.h
app/src/main/cpp/player2/: android_ff_context.cpp  android_ff_context.h  android_player.cpp  android_player.h  clock.cpp  clock.h  ff_context.cpp  ff_context.h  media_base.h  native_options.cpp  native_player2.cpp  play_impl.cpp  play_impl.h  play_queue.cpp  play_queue.h  play_types.h  player.cpp  player.h  rotate_coordinate.h  video_render.cpp  video_render.h
app/src/main/cpp/player2/opengl/: egl_core.cpp  egl_core.h  frame_render.cpp  frame_render.h  gl_info.h  gl_utils.cpp  gl_utils.h  opengl_render.cpp  opengl_render.h  source_scale.h  yuv_render.cpp  yuv_render.h
app/src/main/cpp/render/: ImageDef.h  VideoRender.cpp  VideoRender.h
app/src/main/cpp/render/gl/: GLUtils.cpp  GLUtils.h
app/src/main/java/com/test/ffmpegdemo/: GlPlayerActivity.java  MainActivity.kt  NativeObjectRef.java  PlayerRender.java  PlayerView.java  VideoPlayer.java
app/src/main/java/com/test/ffmpegdemo/player/: MediaClip.java  MediaPlayer2.java  MediaPlayerActivity.java  MediaPlayerView.java  Options.java
app/src/main/res/layout/: activity_main.xml  activity_media_player.xml  activity_player.xml
app/src/main/res/values/: attrs.xml
app/src/test/java/com/test/ffmpegdemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
